<resources>
    <string name="app_name">Movies App</string>

    <!-- Menu strings-->
    <string name="sort_order">Sort Order</string>
    <string name="sort_popular">Most Popular</string>
    <string name="sort_top_rated">Top Rated</string>
    <string name="popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="refresh">Refresh</string>
    <string name="sort_favorites">Favorites</string>
    <string name="favorites">favorites</string>

    <!-- Details Activity -->
    <string name="details_name">Movie Details</string>
    <string name="release_date">Release Date:</string>
    <string name="averarge_rate">Average Rating:</string>
    <string name="detail_error_message">An error has occurred, please go back and try again.</string>

    <!-- Main Activity -->
    <string name="error_message">An error has occurred, please try to refresh.</string>
    <string name="no_network">Please connect to the internet and refresh.</string>
    <string name="no_favorite">You still don\'t have favorites</string>

</resources>
