<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
        <item
            android:title="@string/sort_order"
            android:icon="@drawable/filter"
            android:orderInCategory="1"
            app:showAsAction="ifRoom">

            <menu>
                <group
                    android:checkableBehavior="single">
                    <item android:id="@+id/sort_popular"
                        android:checked="true"
                        android:title="@string/sort_popular"/>
                    <item android:id="@+id/sort_top_rated"
                        android:title="@string/sort_top_rated"/>
                </group>
            </menu>
        </item>

</menu>