<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailsActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:background="@color/activityBackgroundBlue">

    <ScrollView
        android:id="@+id/sv_movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_movie_title"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
                    android:padding="16dp"
                    android:textAlignment="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <ImageView
                    android:id="@+id/iv_favorite"
                    android:layout_width="56dp"
                    android:padding="8dp"
                    android:layout_gravity="right"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_favorite_white"/>

            </LinearLayout>



            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_movie_thumbnail"
                    android:layout_width="match_parent"
                    android:adjustViewBounds="true"
                    android:layout_weight="1"
                    android:layout_height="match_parent" />

                <LinearLayout
                    android:layout_weight="1"
                    android:padding="16dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:textSize="18sp"
                        android:text="@string/release_date"
                        style="@style/detailsRight"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        style="@style/detailsRight"
                        android:textAlignment="center"
                        android:textSize="22sp" />

                    <TextView
                        android:textSize="18sp"
                        android:text="@string/averarge_rate"
                        style="@style/detailsRight"
                        android:textAlignment="center" />

                    <TextView
                        android:id="@+id/tv_average_rate"
                        style="@style/detailsRight"
                        android:textAlignment="center"
                        android:textSize="26sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tv_plot_synopsis"
                android:textSize="20sp"
                android:textColor="@color/textLightBlue"
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/trailer_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/review_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tv_error_message_detail"
        android:textColor="@color/textLightBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/detail_error_message"
        android:textSize="20sp"
        android:visibility="invisible" />

</LinearLayout>
</layout>